--- a/java/index.html
+++ b/java/index.html
@@ -4,10 +4,10 @@
   <title>kani tutorial</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" type="text/css" href="bootstrap/css/bootstrap.min.css">
-  <link rel="stylesheet" type="text/css" href="css/trs.css">
-  <script src="jquery/jquery-3.2.1.min.js"></script>
-  <script src="bootstrap/js/bootstrap.min.js"></script>
+  <link rel="stylesheet" type="text/css" href="../bootstrap/css/bootstrap.min.css">
+  <link rel="stylesheet" type="text/css" href="../css/trs.css">
+  <script src="../jquery/jquery-3.2.1.min.js"></script>
+  <script src="../bootstrap/js/bootstrap.min.js"></script>
 </head>
 <body>
 <h3>kanitutorial.com</h3>
@@ -19,7 +19,7 @@
     <ul class="nav navbar-nav">
       <!--<li class="active"><a href="#">Home</a></li>
       <li><a href="c.php">C</a></li>-->
-      <li><a href="java/javabasics.php">Java</li>
+      <li><a href="javabasics.php">Java</li>
     </ul>
   </div>
 </nav>
@@ -29,7 +29,7 @@
 	  <form action="javabasics.php" method="post">
 	  <div class="form-group">
         <div class="col-md-offset-2 col-sm-2">
-		  <a href="java/javabasics.php"><img class="img-responsive" src="images/Java.png" alt="Java Tutorial"></a>
+		  <a href="javabasics.php"><img class="img-responsive" src="images/Java.png" alt="Java Tutorial"></a>
         </div>
       </div>
 	  </form>
