--- a/index.html
+++ b/index.html
@@ -14,26 +14,26 @@
 <nav class="navbar navbar-default">
   <div class="container-fluid">
     <div class="navbar-header">
-      <a class="navbar-brand" href="#">tutorial.com</a>
+      <a class="navbar-brand" href="#">kanitutorial.com</a>
     </div>
     <ul class="nav navbar-nav">
-      <li class="active"><a href="#">Home</a></li>
-      <li><a href="c.php">C</a></li>
-      <li><a href="javabasics.php">C++</a></li>
-      <li><a href="manage-profile.php">Java</a></li>
+      <!--<li class="active"><a href="#">Home</a></li>
+      <li><a href="c.php">C</a></li>-->
+      <li><a href="javabasics.php">Java</li>
     </ul>
   </div>
 </nav>
 <div class="container">
   <div class="row">
-    <div class="col-sm-2">
-      <h3></h3>
-      <p></p>
-    </div>
-    <div class="col-sm-8">
-      <h3>Column 2</h3>
-      <p>Tutorials</p>
-    </div>
+	  <div class="col-sm-8">
+	  <form action="javabasics.php" method="post">
+	  <div class="form-group">
+        <div class="col-md-offset-2 col-sm-2">
+		  <a href="javabasics.php"><img class="img-responsive" src="images/Java.png" alt="Java Tutorial"></a>
+        </div>
+      </div>
+	  </form>
+	  </div>
     <div class="col-sm-2">
       <h3>Related Topics</h3>        
       <p></p>
