GRE Header Tags

--- a/grewords/index.html
+++ b/grewords/index.html
@@ -19,7 +19,8 @@
     <ul class="nav navbar-nav">
       <!--<li class="active"><a href="#">Home</a></li>
       <li><a href="c.php">C</a></li>-->
-      <li><a href="lettera.php">Gre Words</a></li>
+	  <li><a href="../java/javabasics.php">Java
+      <a href="lettera.php">GRE</a></li>
     </ul>
   </div>
 </nav>
@@ -29,6 +30,7 @@
 	  <form action="javabasics.php" method="post">
 	  <div class="form-group">
         <div class="col-md-offset-2 col-sm-2">
+		<a href="../java/javabasics.php"><img class="img-responsive" src="images/Java.png" alt="Java Tutorial"></a>
 		  <a href="lettera.php"><img class="img-responsive" src="images/Java.png" alt="GRE Tutorial"></a>
         </div>
       </div>
