--- a/java/index.html
+++ b/java/index.html
@@ -19,7 +19,8 @@
     <ul class="nav navbar-nav">
       <!--<li class="active"><a href="#">Home</a></li>
       <li><a href="c.php">C</a></li>-->
-      <li><a href="javabasics.php">Java</li>
+      <li><a href="javabasics.php">Java
+	  <a href="grewords/lettera.php">GRE</li>
     </ul>
   </div>
 </nav>
@@ -30,6 +31,7 @@
 	  <div class="form-group">
         <div class="col-md-offset-2 col-sm-2">
 		  <a href="javabasics.php"><img class="img-responsive" src="images/Java.png" alt="Java Tutorial"></a>
+		  <a href="grewords/lettera.php"><img class="img-responsive" src="images/Java.png" alt="GRE Words"></a>
         </div>
       </div>
 	  </form>
