Paragragh w.r.to. css

--- a/java/index.html
+++ b/java/index.html
@@ -38,7 +38,7 @@
 	  </div>
     <div class="col-sm-2">
       <h3>Related Topics</h3>        
-      <p></p>
+      <p class="normal"></p>
     </div>
   </div>
 </div>
