English Grammer Addition

--- a/english/index.html
+++ b/english/index.html
@@ -4,10 +4,10 @@
   <title>kani tutorial</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" type="text/css" href="bootstrap/css/bootstrap.min.css">
-  <link rel="stylesheet" type="text/css" href="css/trs.css">
-  <script src="jquery/jquery-3.2.1.min.js"></script>
-  <script src="bootstrap/js/bootstrap.min.js"></script>
+  <link rel="stylesheet" type="text/css" href="../bootstrap/css/bootstrap.min.css">
+  <link rel="stylesheet" type="text/css" href="../css/trs.css">
+  <script src="../jquery/jquery-3.2.1.min.js"></script>
+  <script src="../bootstrap/js/bootstrap.min.js"></script>
 </head>
 <body>
 <h3>kanitutorial.com</h3>
@@ -19,9 +19,10 @@
     <ul class="nav navbar-nav">
       <!--<li class="active"><a href="#">Home</a></li>
       <li><a href="c.php">C</a></li>-->
-      <li><a href="java/javabasics.php">Java</li>
-	  <li><a href="grewords/lettera.php">GRE</li>
-	  <li><a href="english/englishgrammerbasics.php">English</li>
+      <li><a href="java/javabasics.php">Java
+	  <a href="grewords/lettera.php">GRE
+	  <a href="english/englishgrammerbasics.php">English
+	  </li>
     </ul>
   </div>
 </nav>
@@ -40,7 +41,7 @@
 	  </div>
     <div class="col-sm-2">
       <h3>Related Topics</h3>        
-      <p></p>
+      <p class="normal"></p>
     </div>
   </div>
 </div>
