HTML Tutorial Addition

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
       <li><a href="java/javabasics.php">Java</li>
 	  <li><a href="grewords/lettera.php">GRE</li>
 	  <li><a href="english/englishgrammerbasics.php">English</li>
+	  <li><a href="html/htmlintro.php">HTML</li>
     </ul>
   </div>
 </nav>
@@ -34,6 +35,7 @@
 		  <a href="java/javabasics.php"><img class="img-responsive" src="images/Java.png" alt="Java Tutorial"></a>
 		  <a href="grewords/lettera.php"><img class="img-responsive" src="images/Java.png" alt="GRE Words"></a>
 		  <a href="english/englishgrammerbasics.php"><img class="img-responsive" src="images/Java.png" alt="English"></a>
+		  <a href="html/htmlintro.php"><img class="img-responsive" src="images/Java.png" alt="HTML"></a>
         </div>
       </div>
 	  </form>
