--- a/english/index.html
+++ b/english/index.html
@@ -21,7 +21,8 @@
       <li><a href="c.php">C</a></li>-->
       <li><a href="java/javabasics.php">Java
 	  <a href="grewords/lettera.php">GRE
-	  <a href="english/englishgrammerbasics.php">English
+	  <a href="englishgrammerbasics.php">English
+	  <a href="html/htmlintro.php">HTML
 	  </li>
     </ul>
   </div>
@@ -34,7 +35,8 @@
         <div class="col-md-offset-2 col-sm-2">
 		  <a href="java/javabasics.php"><img class="img-responsive" src="images/Java.png" alt="Java Tutorial"></a>
 		  <a href="grewords/lettera.php"><img class="img-responsive" src="images/Java.png" alt="GRE Words"></a>
-		  <a href="english/englishgrammerbasics.php"><img class="img-responsive" src="images/Java.png" alt="English"></a>
+		  <a href="englishgrammerbasics.php"><img class="img-responsive" src="images/Java.png" alt="English"></a>
+		  <a href="html/htmlintro.php"><img class="img-responsive" src="images/Java.png" alt="English"></a>
         </div>
       </div>
 	  </form>
