--- a/html/index.html
+++ b/html/index.html
@@ -10,7 +10,7 @@
   <script src="../bootstrap/js/bootstrap.min.js"></script>
 </head>
 <body>
-<h3>GRE Words Explanation with Pictures</h3>
+<h3>kanitutorial.com</h3>
 <nav class="navbar navbar-default">
   <div class="container-fluid">
     <div class="navbar-header">
@@ -19,10 +19,11 @@
     <ul class="nav navbar-nav">
       <!--<li class="active"><a href="#">Home</a></li>
       <li><a href="c.php">C</a></li>-->
-	  <li><a href="../java/javabasics.php">Java
-      <a href="lettera.php">GRE</a></li>
-      <a href="englishgrammerbasics.php">English
-      <a href="html/htmlintro.php">HTML
+      <li><a href="java/javabasics.php">Java
+	  <a href="grewords/lettera.php">GRE
+	  <a href="html/englishgrammerbasics.php">English
+	  <a href="htmlintro.php">HTML
+	  </li>
     </ul>
   </div>
 </nav>
@@ -32,17 +33,17 @@
 	  <form action="javabasics.php" method="post">
 	  <div class="form-group">
         <div class="col-md-offset-2 col-sm-2">
-		<a href="../java/javabasics.php"><img class="img-responsive" src="images/Java.png" alt="Java Tutorial"></a>
-		  <a href="lettera.php"><img class="img-responsive" src="images/Java.png" alt="GRE Tutorial"></a>
-		  <a href="englishgrammerbasics.php"><img class="img-responsive" src="images/Java.png" alt="English"></a>
-		  <a href="html/htmlintro.php"><img class="img-responsive" src="images/Java.png" alt="English"></a>
+		  <a href="java/javabasics.php"><img class="img-responsive" src="images/Java.png" alt="Java Tutorial"></a>
+		  <a href="grewords/lettera.php"><img class="img-responsive" src="images/Java.png" alt="GRE Words"></a>
+		  <a href="english/englishgrammerbasics.php"><img class="img-responsive" src="images/Java.png" alt="English"></a>
+		  <a href="htmlintro.php"><img class="img-responsive" src="images/Java.png" alt="English"></a>
         </div>
       </div>
 	  </form>
 	  </div>
     <div class="col-sm-2">
       <h3>Related Topics</h3>        
-      <p></p>
+      <p class="normal"></p>
     </div>
   </div>
 </div>
