Changes to new additions

--- a/index.html
+++ b/index.html
@@ -19,10 +19,24 @@
     <ul class="nav navbar-nav">
       <!--<li class="active"><a href="#">Home</a></li>
       <li><a href="c.php">C</a></li>-->
-      <li><a href="java/javabasics.php">Java</li>
-	  <li><a href="grewords/lettera.php">GRE</li>
-	  <li><a href="english/englishgrammerbasics.php">English</li>
-	  <li><a href="html/htmlintro.php">HTML</li>
+      <li><a href="java/javabasics.php">Java</a></li>
+	  <li><a href="grewords/lettera.php">GRE</a></li>
+	  <li><a href="english/englishgrammerbasics.php">English</a></li>
+	  <li><a href="html/htmlintro.php">HTML</a></li>
+	  <li><a href="html/htmlintro.php">karaf</a></li>
+	  <li><a href="html/htmlintro.php">osgi</a></li>
+	  <li><a href="html/htmlintro.php">php</a></li>
+	  <li><a href="html/htmlintro.php">perl</a></li>
+	  <li><a href="html/htmlintro.php">linux</a></li>
+	  <li><a href="html/htmlintro.php">oracle</a></li>
+	  <li><a href="html/htmlintro.php">python</a></li>
+	  <li><a href="html/htmlintro.php">interviewquestions</a></li>
+	  <li><a href="html/htmlintro.php">javascript</a></li>
+	  <li><a href="html/htmlintro.php">eclipse</a></li>
+	  <li><a href="html/htmlintro.php">css</a></li>
+	  <li><a href="html/htmlintro.php">mysql</a></li>
+	  <li><a href="html/htmlintro.php">telecom</a></li>
+	  <li><a href="html/htmlintro.php">science</a></li>
     </ul>
   </div>
 </nav>
@@ -36,6 +50,20 @@
 		  <a href="grewords/lettera.php"><img class="img-responsive" src="images/Java.png" alt="GRE Words"></a>
 		  <a href="english/englishgrammerbasics.php"><img class="img-responsive" src="images/Java.png" alt="English"></a>
 		  <a href="html/htmlintro.php"><img class="img-responsive" src="images/Java.png" alt="HTML"></a>
+		  <a href="html/htmlintro.php"><img class="img-responsive" src="images/Java.png" alt="karaf"></a>
+		  <a href="html/htmlintro.php"><img class="img-responsive" src="images/Java.png" alt="osgi"></a>
+		  <a href="html/htmlintro.php"><img class="img-responsive" src="images/Java.png" alt="php"></a>
+		  <a href="html/htmlintro.php"><img class="img-responsive" src="images/Java.png" alt="perl"></a>
+		  <a href="html/htmlintro.php"><img class="img-responsive" src="images/Java.png" alt="linux"></a>
+		  <a href="html/htmlintro.php"><img class="img-responsive" src="images/Java.png" alt="oracle"></a>
+		  <a href="html/htmlintro.php"><img class="img-responsive" src="images/Java.png" alt="python"></a>
+		  <a href="html/htmlintro.php"><img class="img-responsive" src="images/Java.png" alt="interviewquestions"></a>
+		  <a href="html/htmlintro.php"><img class="img-responsive" src="images/Java.png" alt="javascript"></a>
+		  <a href="html/htmlintro.php"><img class="img-responsive" src="images/Java.png" alt="eclipse"></a>
+		  <a href="html/htmlintro.php"><img class="img-responsive" src="images/Java.png" alt="css"></a>
+		  <a href="html/htmlintro.php"><img class="img-responsive" src="images/Java.png" alt="mysql"></a>
+		  <a href="html/htmlintro.php"><img class="img-responsive" src="images/Java.png" alt="telecom"></a>
+		  <a href="html/htmlintro.php"><img class="img-responsive" src="images/Java.png" alt="science"></a>
         </div>
       </div>
 	  </form>
