--- a/mapr/index.html
+++ b/mapr/index.html
@@ -19,11 +19,24 @@
     <ul class="nav navbar-nav">
       <!--<li class="active"><a href="#">Home</a></li>
       <li><a href="c.php">C</a></li>-->
-      <li><a href="java/javabasics.php">Java
-	  <a href="grewords/lettera.php">GRE
-	  <a href="englishgrammerbasics.php">English
-	  <a href="html/htmlintro.php">HTML
-	  </li>
+      <li><a href="java/javabasics.php">Java</a></li>
+	  <li><a href="grewords/lettera.php">GRE</a></li>
+	  <li><a href="english/englishgrammerbasics.php">English</a></li>
+	  <li><a href="html/htmlintro.php">HTML</a></li>
+	  <li><a href="html/htmlintro.php">karaf</a></li>
+	  <li><a href="html/htmlintro.php">osgi</a></li>
+	  <li><a href="html/htmlintro.php">php</a></li>
+	  <li><a href="html/htmlintro.php">perl</a></li>
+	  <li><a href="html/htmlintro.php">linux</a></li>
+	  <li><a href="html/htmlintro.php">oracle</a></li>
+	  <li><a href="html/htmlintro.php">python</a></li>
+	  <li><a href="html/htmlintro.php">interviewquestions</a></li>
+	  <li><a href="html/htmlintro.php">javascript</a></li>
+	  <li><a href="html/htmlintro.php">eclipse</a></li>
+	  <li><a href="html/htmlintro.php">css</a></li>
+	  <li><a href="html/htmlintro.php">mysql</a></li>
+	  <li><a href="html/htmlintro.php">telecom</a></li>
+	  <li><a href="html/htmlintro.php">science</a></li>
     </ul>
   </div>
 </nav>
