--- a/grewords/index.html
+++ b/grewords/index.html
@@ -19,10 +19,43 @@
     <ul class="nav navbar-nav">
       <!--<li class="active"><a href="#">Home</a></li>
       <li><a href="c.php">C</a></li>-->
-	  <li><a href="../java/javabasics.php">Java
+	  <!-- <li><a href="../java/javabasics.php">Java
       <a href="lettera.php">GRE</a></li>
       <a href="englishgrammerbasics.php">English
-      <a href="html/htmlintro.php">HTML
+      <a href="html/htmlintro.php">HTML -->
+      <li><a href="apachebasics.php">Apache</a></li>
+	  <li><a href="biology/biologybasics.php">Biology</a></li>
+	  <li><a href="botany/botanybasics.php">Botany</a></li>
+	  <li><a href="BPM/bpmbasics.php">BPM</a></li>
+	  <li><a href="c/cbasics.php">C</a></li>
+	  <li><a href="c++/cpluscplusbasics.php">C++</a></li>
+	  <li><a href="civics/civicsbasics.php">Civics</a></li>
+	  <li><a href="chemistry/chemistrybasics.php">Chemistry</a></li>
+	  <li><a href="english/englishgrammerbasics.php">English</a></li>
+	  <li><a href="eclipse/eclipsebasics.php">Eclipse</a></li>
+	  <li><a href="embedded/emdeddedbasics.php">Embedded</a></li>
+	  <li><a href="finance/financebasics.php">Finance</a></li>
+	  <li><a href="grewords/lettera.php">GRE</a></li>
+	  <li><a href="geography/geographybasics.php">Geography</a></li>
+	  <li><a href="hbase/hbasebasics.php">Hbase</a></li>
+	  <li><a href="history/historybasics.php">History</a></li>
+	  <li><a href="interviewquestions/interviewbasics.php">Interview Questions</a></li>
+      <li><a href="java/javabasics.php">Java</a></li>
+	  <li><a href="javascript/javascriptbasics.php">JavaScript</a></li>
+	  <li><a href="jobs/jobsbasics.php">Jobs</a></li>
+	  <li><a href="karaf/karafbasics.php">Karaf</a></li>
+	  <li><a href="linux/linuxbasics.php">Linux</a></li>
+	  <li><a href="mapr/maprbasics.php">Mapr</a></li>
+	  <li><a href="maths/mathsbasics.php">Maths</a></li>
+	  <li><a href="mysql/mysqlbasics.php">MySql</a></li>
+	  <li><a href="osgi/osgibasics.php">OSGI</a></li>
+	  <li><a href="php/phpbasics.php">PHP</a></li>
+	  <li><a href="perl/perlbasics.php">Perl</a></li>
+	  <li><a href="python/pythonbasics.php">Python</a></li>
+	  <li><a href="social/socialbasics.php">Social</a></li>
+	  <li><a href="science/sciencebasics.php">Science</a></li>
+	  <li><a href="telecom/telecombasics.php">Telecom</a></li>
+	  <li><a href="zoology/zoologybasics.php">Zoology</a></li>
     </ul>
   </div>
 </nav>
