--- a/html/index.html
+++ b/html/index.html
@@ -66,10 +66,44 @@
 	  <form action="javabasics.php" method="post">
 	  <div class="form-group">
         <div class="col-md-offset-2 col-sm-2">
-		  <a href="java/javabasics.php"><img class="img-responsive" src="images/Java.png" alt="Java Tutorial"></a>
+		  <!-- <a href="java/javabasics.php"><img class="img-responsive" src="images/Java.png" alt="Java Tutorial"></a>
 		  <a href="grewords/lettera.php"><img class="img-responsive" src="images/Java.png" alt="GRE Words"></a>
 		  <a href="english/englishgrammerbasics.php"><img class="img-responsive" src="images/Java.png" alt="English"></a>
-		  <a href="htmlintro.php"><img class="img-responsive" src="images/Java.png" alt="English"></a>
+		  <a href="htmlintro.php"><img class="img-responsive" src="images/Java.png" alt="English"></a> -->
+		  <a href="apachebasics.php"><img class="img-responsive" src="images/Java.png" alt="Apache Tutorial"></a>
+          <a href="biology/biologybasics.php"><img class="img-responsive" src="images/Java.png" alt="Biology"></a>
+          <a href="botany/botanybasics.php"><img class="img-responsive" src="images/Java.png" alt="Botany"></a>
+          <a href="BPM/bpmbasics.php"><img class="img-responsive" src="images/Java.png" alt="BPM"></a>
+          <a href="c/cbasics.php"><img class="img-responsive" src="images/Java.png" alt="C"></a>
+          <a href="c++/cpluscplusbasics.php"><img class="img-responsive" src="images/Java.png" alt="C++"></a>
+          <a href="civics/civicsbasics.php"><img class="img-responsive" src="images/Java.png" alt="Civics"></a>
+          <a href="chemistry/chemistrybasics.php"><img class="img-responsive" src="images/Java.png" alt="Chemistry"></a>
+		  <a href="english/englishgrammerbasics.php"><img class="img-responsive" src="images/Java.png" alt="English"></a>
+          <a href="eclipse/eclipsebasics.php"><img class="img-responsive" src="images/Java.png" alt="Eclipse"></a>
+          <a href="embedded/emdeddedbasics.php"><img class="img-responsive" src="images/Java.png" alt="Embedded"></a>
+          <a href="finance/financebasics.php"><img class="img-responsive" src="images/Java.png" alt="Finance"></a>
+		  <a href="grewords/lettera.php"><img class="img-responsive" src="images/Java.png" alt="GRE Words"></a>
+		  <a href="geography/geographybasics.php"><img class="img-responsive" src="images/Java.png" alt="Geography"></a>
+		  <a href="hbase/hbasebasics.php"><img class="img-responsive" src="images/Java.png" alt="Hbase"></a>
+		  <a href="history/historybasics.php"><img class="img-responsive" src="images/Java.png" alt="History"></a>
+          <a href="html/htmlintro.php"><img class="img-responsive" src="images/Java.png" alt="HTML"></a>
+		  <a href="interviewquestions/interviewbasics.php"><img class="img-responsive" src="images/Java.png" alt="Interview Questions"></a>
+		  <a href="java/javabasics.php"><img class="img-responsive" src="images/Java.png" alt="Java Tutorial"></a>
+		  <a href="javascript/javascriptbasics.php"><img class="img-responsive" src="images/Java.png" alt="JavaScript"></a>
+		  <a href="jobs/jobsbasics.php"><img class="img-responsive" src="images/Java.png" alt="Jobs"></a>
+		  <a href="karaf/karafbasics.php"><img class="img-responsive" src="images/Java.png" alt="Karaf"></a>
+		  <a href="linux/linuxbasics.php"><img class="img-responsive" src="images/Java.png" alt="Linux"></a>
+		  <a href="mapr/maprbasics.php"><img class="img-responsive" src="images/Java.png" alt="Mapr"></a>
+		  <a href="maths/mathsbasics.php"><img class="img-responsive" src="images/Java.png" alt="Maths"></a>
+		  <a href="mysql/mysqlbasics.php"><img class="img-responsive" src="images/Java.png" alt="MySql"></a>
+		  <a href="osgi/osgibasics.php"><img class="img-responsive" src="images/Java.png" alt="OSGI"></a>
+		  <a href="php/phpbasics.php"><img class="img-responsive" src="images/Java.png" alt="PHP"></a>
+		  <a href="perl/perlbasics.php"><img class="img-responsive" src="images/Java.png" alt="Perl"></a>
+		  <a href="python/pythonbasics.php"><img class="img-responsive" src="images/Java.png" alt="Python"></a>
+		  <a href="social/socialbasics.php"><img class="img-responsive" src="images/Java.png" alt="Social"></a>
+		  <a href="science/sciencebasics.php"><img class="img-responsive" src="images/Java.png" alt="Science"></a>
+		  <a href="telecom/telecombasics.php"><img class="img-responsive" src="images/Java.png" alt="Telecom"></a>
+		  <a href="zoology/zoologybasics.php"><img class="img-responsive" src="images/Java.png" alt="Zoology"></a>
         </div>
       </div>
 	  </form>
